--- a/tablechairs_withToggle.html
+++ b/tablechairs_withToggle.html
@@ -62,6 +62,35 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+/*for toggle to display 1 and 2 */
+.slider .on,
+.slider .off {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.slider .off {
+  right: 12px;
+  opacity: 1;
+}
+
+.slider .on {
+  left: 12px;
+  opacity: 0;
+}
+
+input:checked + .slider .on {
+  opacity: 1;
+}
+
+input:checked + .slider .off {
+  opacity: 0;
+}
 
 </style>
 </head>
@@ -70,11 +99,19 @@ input:checked + .slider:before {
 <p>A food court would like to place tables and chairs so that they can maximise the number of chairs in the area below, while ensuring that </p>
 <ul>
 <li>there is at most one chair or table per square, but nothing on the obstaclles (brown squares and grey squares);</li>
-<li>no more than 2 tables touch (even diagonally); and</li>
+<li>no tables touch (even diagonally); and</li>
 <li>a chair must have a table beside it.</li>
 </ul>
 <p>Click on the grid below to place a table and its chairs. (Click again to remove the table.) How many chairs can you get?</p>
+<p>Toggle the switch to allow 2 tables to touch each other </p>
 
+<label class="switch">
+	<input type="checkbox", id = "Toggle">
+	<span class="slider round">
+		<span class="off">1</span>
+		<span class="on">2</span>
+	</span>
+</label>
 
 <div style="text-align: center; margin-bottom: 20px;">
     <label for="layoutSelect">Choose a layout: </label>
@@ -85,13 +122,6 @@ input:checked + .slider:before {
         <option value="4">10x10 L grid</option>
     </select>
 	<button>Clear Layout</button>
-	<label class="switch">
-		<input type="checkbox", id = "Toggle">
-		<span class="slider round">
-			<span>2</span>
-			<span>1</span>
-		</span>
-	</label>
 </div>
 <canvas id="space" width="800px" height="600px" style="margin-left: auto; margin-right: auto; display: block; cursor: pointer; border: solid 2px;"></canvas>
 
